WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131768
[MSE] Multiple initialization segments with same codecs in tracks fail validation.
https://bugs.webkit.org/show_bug.cgi?id=131768
Summary
[MSE] Multiple initialization segments with same codecs in tracks fail valida...
Jer Noble
Reported
2014-04-16 15:20:09 PDT
[MSE] Multiple initialization segments with same codecs in tracks fail validation.
Attachments
Patch
(24.55 KB, patch)
2014-04-16 16:07 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-04-16 16:07:02 PDT
Created
attachment 229494
[details]
Patch
Jer Noble
Comment 2
2014-04-17 10:55:45 PDT
Committed
r167440
: <
http://trac.webkit.org/changeset/167440
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug